# data_science_portfolio

./: .pre-commit-config.yaml  .yamllint  README.md  pyproject.toml  utils.py
heart_attack/: main.ipynb
projects/heart_attack/: main.ipynb
utils/: data.py  plotting.py
