[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "commitizen>=3.30.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "kagglehub>=0.3.3",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.10.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.0",
    "scikit-learn>=1.5.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
